--- a/index.html
+++ b/index.html
@@ -30,6 +30,53 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+
+      <div class="row time-block">
+        <div class="col-md-1 hour">9:00</div>
+        <textarea class="col-md-10 description past"></textarea>
+        <button class="col-md-1 saveBtn"><i class="far fa-save"></i></button>
+    </div>
+    <div class="row time-block">
+        <div class="col-md-1 hour">10:00</div>
+        <textarea class="col-md-10 description past"></textarea>
+        <button class="col-md-1 saveBtn"><i class="far fa-save"></i></button>
+    </div>
+    <div class="row time-block">
+        <div class="col-md-1 hour">11:00</div>
+        <textarea class="col-md-10 description past"></textarea>
+        <button class="col-md-1 saveBtn"><i class="far fa-save"></i></button>
+    </div>
+    <div class="row time-block">
+        <div class="col-md-1 hour">12:00</div>
+        <textarea class="col-md-10 description past"></textarea>
+        <button class="col-md-1 saveBtn"><i class="far fa-save"></i></button>
+    </div>
+    <div class="row time-block">
+        <div class="col-md-1 hour">13:00</div>
+        <textarea class="col-md-10 description past"></textarea>
+        <button class="col-md-1 saveBtn"><i class="far fa-save"></i></button>
+    </div>
+    <div class="row time-block">
+        <div class="col-md-1 hour">14:00</div>
+        <textarea class="col-md-10 description past"></textarea>
+        <button class="col-md-1 saveBtn"><i class="far fa-save"></i></button>
+    </div>
+    <div class="row time-block">
+        <div class="col-md-1 hour">15:00</div>
+        <textarea class="col-md-10 description past"></textarea>
+        <button class="col-md-1 saveBtn"><i class="far fa-save"></i></button>
+    </div>
+    <div class="row time-block">
+        <div class="col-md-1 hour">16:00</div>
+        <textarea class="col-md-10 description past"></textarea>
+        <button class="col-md-1 saveBtn"><i class="far fa-save"></i></button>
+    </div>
+    <div class="row time-block">
+        <div class="col-md-1 hour">17:00</div>
+        <textarea class="col-md-10 description past"></textarea>
+        <button class="col-md-1 saveBtn"><i class="far fa-save"></i></button>
+    </div>
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
